--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,23 +1,25 @@
 {
-    "compilerOptions": {
-      "sourceMap": true,
-      "noImplicitAny": false,
-      "module": "commonjs",
-      "target": "es6",
-      "lib": [
-        "es2015",
-        "es2017",
-        "dom"
-      ],
-      "removeComments": true,
-      "allowSyntheticDefaultImports": false,
-      "jsx": "react",
-      "allowJs": true,
-      "baseUrl": "./",
-      "paths": {
-        "components/*": [
-          "src/components/*"
-        ],
-      }
-    }
-  }
+  "compilerOptions": {
+    "target": "es5",
+    "lib": [
+      "dom",
+      "dom.iterable",
+      "esnext"
+    ],
+    "allowJs": true,
+    "skipLibCheck": true,
+    "esModuleInterop": true,
+    "allowSyntheticDefaultImports": true,
+    "strict": true,
+    "forceConsistentCasingInFileNames": true,
+    "module": "esnext",
+    "moduleResolution": "node",
+    "resolveJsonModule": true,
+    "isolatedModules": true,
+    "noEmit": true,
+    "jsx": "preserve"
+  },
+  "include": [
+    "src"
+  ]
+}
