--- a/package.json
+++ b/package.json
@@ -3,14 +3,24 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@types/jest": "24.0.4",
-    "@types/node": "11.9.3",
-    "@types/react": "16.8.3",
-    "@types/react-dom": "16.8.1",
+    "@material-ui/core": "^3.9.2",
+    "@material-ui/icons": "^3.0.2",
+    "bootstrap": "^4.3.1",
+    "jquery": "^3.3.1",
+    "mdbreact": "^4.11.0",
+    "popper.js": "^1.14.7",
+    "prop-types": "^15.7.2",
     "react": "^16.8.1",
     "react-dom": "^16.8.1",
+    "react-intl": "^2.8.0",
+    "react-intl-translations-manager": "^5.0.3",
+    "react-redux": "latest",
+    "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.5",
-    "typescript": "3.3.3"
+    "recharts": "^1.5.0",
+    "redux": "^4.0.1",
+    "redux-thunk": "^2.3.0",
+    "styled-components": "^4.1.3"
   },
   "scripts": {
     "start": "react-scripts start",
