--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "author": "Stanslav Kasika",
   "private": true,
   "dependencies": {
+    "axios": "^0.18.0",
     "bootstrap": "^4.3.1",
+    "prop-types": "^15.7.2",
     "react": "^16.8.3",
     "react-dom": "^16.8.3",
     "react-intl": "^2.8.0",
