--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "prop-types": "^15.7.2",
     "react": "^16.8.3",
     "react-dom": "^16.8.3",
+    "react-icons": "^3.5.0",
     "react-intl": "^2.8.0",
     "react-redux": "^6.0.1",
     "react-router-dom": "^4.3.1",
