--- a/package.json
+++ b/package.json
@@ -4,19 +4,24 @@
   "author": "Stanslav Kasika",
   "private": true,
   "dependencies": {
+    "@trendmicro/react-sidenav": "^0.4.5",
     "axios": "^0.18.0",
     "bootstrap": "^4.3.1",
+    "ensure-array": "^1.0.0",
     "prop-types": "^15.7.2",
-    "react": "^16.8.3",
+    "react": "^16.8.4",
     "react-dom": "^16.8.3",
     "react-icons": "^3.5.0",
     "react-intl": "^2.8.0",
+    "react-loadable": "^5.5.0",
     "react-redux": "^6.0.1",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.5",
     "reactstrap": "^7.1.0",
     "redux": "^4.0.1",
     "redux-thunk": "^2.3.0",
+    "rsuite": "^3.7.8",
+    "semantic-ui-react": "^0.85.0",
     "styled-components": "^4.1.3",
     "uuid": "^3.3.2"
   },
